# guadalinex-2005

./: Changelog  Changelog_3.0+_es  EXTERNAL_PKGS
apps_sel_and_conf/branding/: guadalinex_v3_grub.xpm
apps_sel_and_conf/cdd/: README
apps_sel_and_conf/default/: adaptaciones_gx2005.txt  excluded.txt  excluded_and_not_installed_though_included_in_the_cd.txt  getsize.sh  jerarquia.odg  lista_paquetes_wiki.txt  lista_software_gx2004.txt  tuneos_gx2005.txt
doc/: EXTERNAL_PKGS
live_installer/: README  README.gparted  README.txt
mirror_selector/: sample-watermain.list  watermain.glade  watermain.py
no_live_installer/: README
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/: ChangeLog  Makefile  README  autogen.sh  configure.in  makedist
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/debian/: changelog  eagle-usb-utils.postinst  eagle-usb-utils.postrm  rules
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/debian/po/: POTFILES.in  da.po
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/doc/sources/: eagleconfig.xml  eagleconfig_front.bash.xml  pppoa.xml
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/driver/: Adiutil.h  Dsp.c  Makefile  Oam.h  Sar.c  eu_boot_sm.c  eu_main.c  eu_sm.h
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/driver/firmware/: HexRecord.h  Makefile  builddsp.c
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/driver/firmware/sagem/isdn/: rtbldei0.bnm  rtbldei3.bnm
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/driver/firmware/sagem/pots/: rtbldep0.bnm  rtbldep1.bnm  rtbldep3.bnm
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/driver/user/: CMVei.txt  CMVepFR.txt  CMVepIT.txt  Makefile  eagle-usb.conf  eaglectrl.c
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/pppoa/: ppp.c  pppoa.c
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/utils/eagleconfig.pl/: eagleconfig.pl  mandrake.pl  redhat.pl  ui.pl
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/utils/eagleconfig.pl/contrib/dialog/: aclocal.m4  buttons.c  configure  dialog.h  fselect.c  makefile.in  menubox.c  msgbox.c  rc.c  tailbox.c  timebox.c
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/utils/eagleconnect/images/: fichierssysteme.ppm
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/utils/scripts/: Common.pm  common.pm  eaglediag  eu_config_bash  fctStartAdsl  net_cnx_down  net_cnx_pg  options  testconnec
no_live_installer/default/src/eagle-usb/eagle-usb-2.1.1/utils/scripts/lang/: en  mk  p2  pl
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/: Makefile.am  Makefile.in  configure  configure.in
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/debian/: changelog  control  copyright
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/src/: Makefile.am  Makefile.in  uda-postconfig-backend.sh  uda-postconfig.c  uda-postinstall.c
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/src/branding/Guadalinex/es/: Makefile.am
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/src/branding/Molinux/: Makefile.in
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.19/src/data/: Makefile.in  uda-postconfig.glade  uda-postinstall.glade
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/: Makefile  Makefile.am  Makefile.in  detect-additional-partitions.py  repositorio.guadalinex.org_flamenco_dists_flamenco_Release  repositorio.guadalinex.org_flamenco_dists_flamenco_main_binary-i386_Packages  repositorio.guadalinex.org_guadalinex-flamenco_dists_flamenco_main_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_Release  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_Release.gpg  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_main_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_multiverse_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_restricted_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy-security_universe_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy_Release.gpg  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy_main_binary-i386_Packages  repositorio.guadalinex.org_ubuntu-breezy_dists_breezy_multiverse_binary-i386_Packages  uda-goodbye  uda-postconfig  uda-postconfig-backend.sh  uda-postinstall
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/branding/: Makefile  Makefile.am  Makefile.in
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/branding/Guadalinex/: Makefile
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/branding/Guadalinex/es/: Makefile  Makefile.in
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/branding/Molinux/: Makefile  Makefile.am
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/branding/Molinux/es/: Makefile
no_live_installer/default/src/uda-postinstall/uda-postinstall-0.21/src/data/: Makefile  Makefile.am  uda-goodbye.glade
translation/: README
trunk/live_installer/network_clon/busybox-cvs-20040623/: Rules.mak.in  configure  configure.ac
trunk/live_installer/network_clon/busybox-cvs-20040623/coreutils/: Config.in
trunk/live_installer/network_clon/busybox-cvs-20040623/debian/: changelog  config-initramfs  config-udeb  files
trunk/live_installer/network_clon/busybox-cvs-20040623/include/: acconfig.h.in  config.h
trunk/live_installer/network_clon/busybox-cvs-20040623/modutils/: Makefile.in
trunk/live_installer/network_clon/busybox-cvs-20040623/modutils/obj-2.6/: moduleops.c  moduleops.h
trunk/live_installer/network_clon/busybox-cvs-20040623/scripts/: mkdep
trunk/live_installer/network_clon/busybox-cvs-20040623/scripts/config/: conf
trunk/live_installer/network_clon/busybox-cvs-20040623/shell/: ash.c
trunk/live_installer/network_clon/busybox-cvs-20040623/sysdeps/unknown/: Config.in
(+3577 files in other folders)
