SUBDIRS = src po

EXTRA_DIST =                    \
	debian			\
        AUTHORS                 \
	NEWS                    \
	README                  \
	intltool-merge.in       \
	intltool-update.in      \
	intltool-extract.in

DISTCLEANFILES =                        \
	po/.intltool-merge-cache        \
	intltool-extract                \
	intltool-merge                  \
	intltool-update

	
