AC_PREREQ(2.52)

AC_INIT(uda-postinstall, 0.19, http://www.molinux.info)
AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
                                                                                
AM_DISABLE_STATIC
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl --------------------------------------------------

GLIB_REQUIRED=2.4.0
GTK_REQUIRED=2.4.0
GLADE_REQUIRED=2.4.0

AC_SUBST(GLIB_REQUIRED)
AC_SUBST(GTK_REQUIRED)
AC_SUBST(GLADE_REQUIRED)
	   
PKG_CHECK_MODULES(UDA_POSTINSTALL,\
	 glib-2.0 >= $GLIB_REQUIRED                \
	 gthread-2.0 >= $GLIB_REQUIRED             \
	 gmodule-2.0 >= $GLIB_REQUIRED		  \
	 gtk+-2.0    >= $GTK_REQUIRED             \
	 libglade-2.0 >= $GLADE_REQUIRED )
AC_SUBST(UDA_POSTINSTALL_CFLAGS)
AC_SUBST(UDA_POSTINSTALL_LIBS)

GNOME_COMPILE_WARNINGS

GNOME_COMMON_INIT

ALL_LINGUAS="es"

GETTEXT_PACKAGE=uda-postinstall
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [GetText Package])
                                                                               
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(LOCALEDIR, "${ac_default_prefix}/${DATADIRNAME}/locale", [Locale dir])
else
  AC_DEFINE_UNQUOTED(LOCALEDIR, "${prefix}/${DATADIRNAME}/locale", [Locale dir])
fi


AC_OUTPUT([
Makefile
src/Makefile
src/data/Makefile
src/branding/Makefile
src/branding/Molinux/Makefile
src/branding/Molinux/es/Makefile
src/branding/Guadalinex/Makefile
src/branding/Guadalinex/es/Makefile
po/Makefile.in
])

