pixmapdir = $(datadir)/uda-postinstall/branding/Guadalinex/es/
pixmap_DATA = 	endinst_big.jpg 		\
		endinst.jpg			\
		corp_pic_big1.jpg 		\
		corp_pic1.jpg 			\
		corp_pic_big2.jpg 		\
		corp_pic2.jpg 			\
		corp_pic_big3.jpg 		\
		corp_pic3.jpg 			\
		corp_pic_big4.jpg 		\
		corp_pic4.jpg 			\
		corp_pic_big5.jpg 		\
		corp_pic5.jpg 			\
		reg_doc_big.jpg			\
		reg_doc.jpg

EXTRA_DIST = $(pixmap_DATA)
